<resources>
    <string name="app_name">Sports Connect</string>
    <string name="action_settings">Settings</string>
    <string name="apiKeyTomek">AIzaSyDYQZiMBCS2Q3QoGICtydynuVm6loRc61Q</string>
    <string name="apiKeyWalen">AIzaSyAhfg2VvV2v5wSYSknbNEQIClQVR5Ykjo8</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_event_details">Szczegóły wydarzenia</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="eventList">Lista</string>
    <string name="eventMap">Mapa</string>
    <string name="title_activity_new_event">Dodaj wydarzenie</string>
    <string name="title_activity_sign_in">Logowanie</string>
    <string name="sort">Sortuj</string>
    <string name="filter">Filtruj</string>
    <string name="logout">Wyloguj</string>
    <string name="settings">Ustawienia</string>
    <string name="selectSort">Sortuj</string>
    <string name="distance">Odległość</string>
    <string name="sportType">Typ aktywności</string>
    <string name="participantCount">Ilość uczestników</string>
    <string name="timeToStart">Czas do rozpoczęcia</string>
    <string name="ascending">Rosnąco</string>
    <string name="descending">Malejąco</string>
    <string name="cancel">Anuluj</string>
    <string name="name">Imię</string>
    <string name="Nazwisko">Nazwisko</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="repeatPass">Powtórz hasło</string>
    <string name="login">Zaloguj się</string>
    <string name="register">Załóż konto</string>
    <string name="downloading">Trwa pobieranie danych…</string>
    <string name="notEmpty">To pole nie może być puste</string>
    <string name="invalidPass">Wpisane hasło jest niepoprawne</string>
    <string name="passwordDontMatch">Wpisane hasła się nie zgadzają</string>
    <string name="invalidMail">Wpisany adres nie jest poprawny</string>
    <string name="failedToRegister">Nie udało się utworzyć konta użytkownika</string>
    <string name="registering">Tworzenie konta…</string>
    <string name="failedToLogin">Nie powiodło się logowanie</string>
    <string name="loggingIn">Trwa logowanie…</string>
    <string name="noItems">Brak wydarzeń w pobliżu</string>
    <string name="eventName">Nazwa wydarzenia</string>
    <string name="date">Data wydarzenia</string>
    <string name="failedToAddEvent">Nie powiodło się dodawanie wydarzenia</string>
    <string name="selectValidDate"><![CDATA[Wybierz poprawną datę]]></string>
    <string name="newEvent">Nowe wydarzenie</string>
    <string name="eventDetails">Szczegóły wydarzenia</string>
    <string name="refresh">Odśwież</string>
    <string name="retry">Ponów</string>
    <string name="failedDownloadingMsg">Nie udało się pobrać wydarzeń. Prosimy spróbować później.</string>
    <string name="failedDownloadingData">Błąd pobierania danych</string>
    <string name="insufficientPermissions">Brak wymaganych uprawnień</string>
    <string name="requiresPermissions">W celu zachowania funkcjonalności, wymagane jest przyznanie uprawnień do uzyskiwania lokalizacji.</string>
    <string name="quit">Wyjdź</string>
    <string name="selectLocation">Wybierz miejsce wydarzenia</string>
    <string name="serverApiKey">24532706524-aopb1njpu7mraqtlp9a8qbso3fltrns7.apps.googleusercontent.com</string>
    <string name="googleLoginFailed">Logowanie kontem Google nie powiodło się!</string>
    <string name="connection_not_successful">Połączenie nieudane!</string>
</resources>
