<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.siiletscode.droppr.EventsActivity">
    <item
        android:id="@+id/actionSort"
        android:orderInCategory="100"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionFilter"
        android:orderInCategory="100"
        android:visible="false"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionSettings"
        android:orderInCategory="100"
        android:visible="false"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
